--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,3 +1,6 @@
 {
-  "item.tutorialmod.uranium":"Uranium"
+  "item.tutorialmod.uranium":"Uranium",
+  "item.tutorialmod.thorium":"Thorium",
+
+  "itemgroup.ruby": "Tutorial Mod"
 }
