almost done with a new block, 11:27 in the tutorial crashes when opening inventory

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -2,5 +2,7 @@
   "item.tutorialmod.uranium":"Uranium",
   "item.tutorialmod.thorium":"Thorium",
 
+  "block.tutorialmod.thorium_block": "Thorium Block",
+
   "itemgroup.ruby": "Tutorial Mod"
 }
