fixed crashing issue and added uranium_block as well as a new texture for the thorium_block

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.tutorialmod.thorium":"Thorium",
 
   "block.tutorialmod.thorium_block": "Thorium Block",
+  "block.tutorialmod.uranium_block": "Uranium Block",
 
   "itemgroup.ruby": "Tutorial Mod"
 }
