added metal detector item, not work properly, fix tetxture

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.tutorialmod.thorium":"Thorium",
   "item.tutorialmod.raw_thorium":"Raw Thorium",
   "item.tutorialmod.raw_uranium":"Raw Uranium",
+  "item.tutorialmod.metal_detector":"Metal Detector",
 
   "block.tutorialmod.thorium_block": "Thorium Block",
   "block.tutorialmod.raw_thorium_block": "Raw Thorium Block",
