new customBLock - enrichment_station.json - not yet implemented UI

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -15,5 +15,9 @@
   "block.tutorialmod.thorium_ore": "Thorium Ore",
   "block.tutorialmod.deepslate_thorium_ore": "Deepslate Thorium Ore",
 
+
+
+  "block.tutorialmod.enrichment_station": "Enrichment Station",
+
   "itemgroup.mod": "Tutorial Mod"
 }
